devops/production/kubernetes/app/3_webserver/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: app
  name: laravel-in-kubernetes-webserver
  labels:
    tier: backend
    layer: webserver
spec:
  replicas: 1
  selector:
    matchLabels:
      tier: backend
      layer: webserver
  template:
    metadata:
      labels:
        tier: backend
        layer: webserver
    spec:
      containers:
        - name: webserver
          image: "henrotaym/trustup-io-website-monitoring-web:${IMAGE_TAG}"
          ports:
            - containerPort: 80
