devops/production/kubernetes/app/3_webserver/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: laravel-in-kubernetes-webserver
  namespace: app
  annotations:
    # (Optional): Annotations for the Ingress Controller
    # -- ingress class is needed when traefik is not the default
    kubernetes.io/ingress.class: traefik
    # ---
    # -- entrypoint and tls configurations
    # traefik.ingress.kubernetes.io/router.entrypoints: web, websecure
    # traefik.ingress.kubernetes.io/router.tls: "true"
    # ---
    # -- optional middlewares
    # traefik.ingress.kubernetes.io/router.middlewares:your-middleware@kubernetescrd
    # ---
  labels:
    tier: backend
    layer: webserver
spec:
  rules:
    - host: "monitoring.website.trustup.io"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: laravel-in-kubernetes-webserver
                port:
                  number: 80
